# xmath

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  run.sh
src/: CMakeLists.txt  xhistogram.h  xmatrix.cpp  xmatrix.h
test/: CMakeLists.txt
test/src/: xmatrix_tests.cpp
